# solana-lottery

./: .env.example  .gitignore  README.md  pyproject.toml
src/solana_lottery/: cli.py  config.py  draw.py  project_constants.py  rpc.py  token_accounts.py  verify.py
